--- a/assets/scss/_default/home.scss
+++ b/assets/scss/_default/home.scss
@@ -118,7 +118,7 @@
         .home-picture {
             width:auto;
             height: 250px;
-            object-fit:none;
+            object-fit:cover;
         }
     
         .home-shifted {
